# yast-iscsi-server

./: .gitignore  README.md  yast2-iscsi-server.spec.in
agents/: Makefile  Makefile.am  Makefile.in  ietd.scr
doc/autodocs/: Makefile  Makefile.in
iscsi-server/: yast2-iscsi-server.spec.in
iscsi-server/agents/: ietd.scr
iscsi-server/package/: yast2-iscsi-server.changes
iscsi-server/src/: IscsiServer.ycp  dialogs.ycp  helps.ycp  iscsi-server.desktop  iscsi-server_auto.ycp  iscsi-server_proposal.ycp  widgets.ycp  wizards.ycp
iscsi-server/testsuite/tests/: readConfig.ycp
package/: yast2-iscsi-server.changes  yast2-iscsi-server.spec
src/: IscsiServer.ycp  IscsiServer2.pm  IscsiServerFunctions.pm  Makefile.am  complex.ycp  dialogs.ycp  helps.ycp  iscsi-server.desktop  iscsi-server.ycp  iscsi-server_auto.ycp  iscsi-server_proposal.ycp  widgets.ycp  wizards.ycp
src/clients/: iscsi-server.rb  iscsi-server.ycp  iscsi-server_auto.rb  iscsi-server_auto.ycp  iscsi-server_proposal.rb
src/desktop/: iscsi-server.desktop
src/include/iscsi-server/: complex.rb  dialogs.rb  helps.rb  helps.ycp  widgets.rb  widgets.ycp  wizards.rb  wizards.ycp
src/modules/: IscsiServer.rb  IscsiServerFunctions.pm
testsuite/: Makefile
testsuite/tests/: IscsiServer.rb  readConfig.out  readConfig.rb  readConfig.ycp
